objects/Informatics_Demologs_Mapping__mdt.object
<CustomObject>
    <label>Informatics Demologs Mapping</label>
    <pluralLabel>Informatics Demologs Mappings</pluralLabel>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_List__c</fullName>
        <label>CC List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>primary_Contact__c</fullName>
        <label>primary Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>